# SiLog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  code.txt  dev_plan.txt
common/: CMakeLists.txt  silog_trans.c  silog_trans.h
common/include/: silog_mpsc.h  silog_trans.h  silog_utils.h
common/src/: silog_mpsc.c  silog_utils.c
docs/: README.md  USER_GUIDE.md
include/: si_log.h  si_log_entry.h  silog.h  silog_entry.h
interface/: silog.h  silog_interface.h
silog_cat/: CMakeLists.txt
silog_cat/include/: silog_cat.h
silog_cat/src/: silog_cat.c
silog_comm/: CMakeLists.txt
silog_comm/include/: silog_adapter.h  silog_error.h  silog_ipc.h  silog_mpsc.h  silog_pqueue.h  silog_prelog.h  silog_remote.h  silog_securec.h  silog_time.h  silog_trans.h  silog_utils.h
silog_comm/src/: silog_ipc.c  silog_mpsc.c  silog_pqueue.c  silog_prelog.c  silog_remote.c  silog_securec.c  silog_time.c  silog_trans.c  silog_utils.c
silog_d/: CMakeLists.txt
silog_d/include/: silog_daemon.h
silog_d/src/: silog_deamon.c
silog_dae/: CMakeLists.txt
silog_dae/include/: silog_daemon.h  silog_file_manager.h
silog_dae/src/: silog_daemon.c  silog_file_manager.c
silog_exe/: CMakeLists.txt
silog_exe/src/: silog_exe.c
silog_lib/: CMakeLists.txt
silog_lib/include/: silog_entry.h
silog_lib/src/: silog_entry.c
silog_logger/: CMakeLists.txt
silog_logger/include/: silog_logger.h
silog_logger/src/: silog_logger.c
silogd/: CMakeLists.txt  silog_daemon.h  silog_deamon.c  silog_deamon.h
siloglib/: CMakeLists.txt  silog_entry.c
siloglib/include/: silog_entry.h
siloglib/src/: silog_entry.c
src/: si_log.c  silog_entry.c
test/: CMakeLists.txt  demo_client.c  demo_server.c  silog_daemon_test.c  silog_entry_test.c  silog_logger_test.c  silog_mpsc_test.c  silog_trans_test.c
tests/: CMakeLists.txt  run_sanitizers.sh
tests/benchmark/: CMakeLists.txt  benchmark_test.cpp
tests/concurrency/: CMakeLists.txt  concurrency_test.cpp
tests/fuzz/: CMakeLists.txt  queue_fuzz.cpp
tests/integration/: CMakeLists.txt  integration_test.cpp  prelog_integration_test.cpp  remote_integration_test.cpp  silog_logger_print_test.cpp
tests/legacy/: CMakeLists.txt  silog_gtest.cpp  silog_ipc_test.c  silog_logger_test.c  silog_mpsc_test.c  silog_test.c  silog_test_comm.h  silog_time_test.c  silog_trans_test.c
tests/reliability/: CMakeLists.txt  reliability_test.cpp
tests/system/: CMakeLists.txt  daemon_system_test.cpp  system_test.cpp
tests/unit/: CMakeLists.txt  daemon_exception_test.cpp  daemon_test.cpp  file_manager_exception_test.cpp  file_manager_test.cpp  ipc_test.cpp  mpsc_test.cpp  pqueue_test.cpp  prelog_test.cpp  remote_test.cpp  securec_test.cpp  time_test.cpp  trans_test.cpp  utils_test.cpp
